--- a/my-ecomm-store-uctest/Dockerfile
+++ b/my-ecomm-store-uctest/Dockerfile
@@ -1,11 +1,12 @@
+# Stage 1: Build the JAR
 FROM maven:3.9.5-eclipse-temurin-17 AS builder
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
-#run the app
+# Stage 2: Run the APP
 FROM openjdk:17-jdk-slim
 WORKDIR /app
-COPY --from=builder /app/target/shopease-0.0.1-SNAPSHOT.jar app.jar
+COPY  --from=builder /app/target/shopease-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT [ "java", "-jar", "app.jar"]
